# foxy_rust

./: Cargo.toml  README.md
foxy/: Cargo.toml
foxy/examples/foxy/: main.rs
foxy/examples/foxy_example/: main.rs
foxy/res/: fixed_value.hlsl
foxy/res/shaders/: circle.wgsl  ellipse.wgsl  fixed_value.hlsl  simple.hlsl  simple.wgsl  uv.wgsl
foxy/src/: canvas.rs  color.rs  components.rs  error.rs  event.rs  foxy.rs  framework.rs  graphics.rs  lib.rs  prelude.rs  renderer.rs  runnable.rs  time.rs  vulkan.rs
foxy/src/canvas/: event_dispatcher.rs
foxy/src/graphics/: color.rs  primitive.rs  renderer.rs  shader.rs  window.rs
foxy/src/renderer/: pipeline.rs  primitives.rs  uniforms.rs  vsync.rs
foxy/src/vulkan/: device.rs  pipeline.rs  shader.rs  swapchain.rs
kemono/: Cargo.toml
kemono/examples/app/: main.rs
kemono/examples/kemono_example/: components.rs  main.rs
kemono/src/: app.rs  app_loop.rs  app_state.rs  lib.rs  lifecycle.rs
kemono/src/app/: state.rs
kemono_transform/: Cargo.toml  README.md
kemono_transform/src/: transform.rs
