[package]
name    = "foxy"
version = "0.1.0"
edition = "2021"
authors = ["GTLugo"]

[dependencies]
kemono_transform = { version = "0.1", path = "../kemono_transform" }

## logging and errors ##
tracing            = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-unwrap     = "0.10.0"
thiserror          = "1.0.39"

## rendering ##
winit   = "0.28.2"
wgpu    = { version = "0.15.1", features = ["spirv"] }
shaderc = "0.8.2"

## utilities ##
tokio        = { version = "1.26", features = ["full"] }
strum        = "0.24.1"
strum_macros = "0.24.3"

## data ##
bytemuck = { version = "1.13.1", features = [ "derive" ] }
glam     = { version = "0.23.0", features = ["bytemuck"] }
hex      = "0.4.3"
rgb      = "0.8.36"
image    = { version = "0.24.5", features = ["png", "jpeg"] }
#uuid     = { version = "1.2.2", features = ["v4", "fast-rng"] }

[[example]]
name = "foxy"