[package]
name    = "foxy"
version = "0.1.0"
edition = "2021"
authors = ["GTLugo"]

[dependencies]
kemono_transform = { version = "0.1", path = "../kemono_transform" }

## logging and errors ##
tracing            = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-unwrap     = "0.10.0"
thiserror          = "1.0.39"

## rendering ##
winit = "0.28.2"
wgpu  = "0.15.1"

## utilities ##
futures      = "0.3.26"
rayon        = "1.7.0"
strum        = "0.24.1"
strum_macros = "0.24.3"

## data ##
bytemuck = { version = "1.13.1", features = [ "derive" ] }
#glam     = { version = "0.23.0", features = ["bytemuck"] }
hex      = "0.4.3"
rgb      = "0.8.36"
#image    = { version = "0.24.5", features = ["png", "jpeg"] }
#uuid     = { version = "1.2.2", features = ["v4", "fast-rng"] }

[[example]]
name = "foxy"