[package]
name = "kemono_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.4.0"
bytemuck = { version = "1.13.0", features = [ "derive" ] }
glam = { version = "0.23.0", features = ["bytemuck"] }